cluster/apps/nzbget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  labels:
    app.kubernetes.io/name: nzbget
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nzbget
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nzbget
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: nzbget
          image: linuxserver/nzbget:v25.3-ls214
          ports:
            - containerPort: 6789
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nzbget-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: nzbget-downloads-pvc
