cluster/apps/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  labels:
    app.kubernetes.io/name: nzbget
spec:
  type: ClusterIP
  ports:
    - port: 6789
      targetPort: 6789
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nzbget
